# AMEVA-WoL

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  start_bot.sh
deploy/systemd/: ameva-wol-user.service  ameva-wol.service
docs/: telegram_setup_guide.html  telegram_setup_guide.md
scripts/: check-environment.ps1  check-environment.sh
src/ameva_wol/: __init__.py  __main__.py  app.py  cli.py  commands.py  config.py  locking.py  logging_config.py  models.py  ping.py  registry.py  scheduler.py  security.py  sysinfo.py  tapo_plug.py  telegram_bot.py  utils.py  wol.py
termux/: start-ameva-wol.sh
tests/: test_commands.py  test_config.py  test_ping.py  test_registry.py  test_scheduler.py  test_security.py  test_wol.py
