[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ameva-wol"
version = "1.0.0"
description = "Lightweight, secure, Telegram-controlled Wake-on-LAN gateway for Termux and Linux"
readme = "README.md"
authors = [
    { name = "AMEVA Team" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot>=20.0,<22.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "psutil>=5.9.0,<6.0.0",
    "speedtest-cli>=2.1.3,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<9.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "ruff>=0.1.0,<1.0.0",
    "mypy>=1.5.0,<2.0.0",
]

[project.scripts]
ameva-wol = "ameva_wol.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "UP", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
